@@ -1,3 +1,7 @@
+2011-06-23  Robert Larice
+ * src/frontend/com_sysinfo.c :
+   tiny rewrite, typefix, don't compare EOF with a char
+
 2011-06-23 Holger Vogt
  * measure.c: another try to obtain correct vector handling
 
